fix: always collapsed menu close icon

--- a/baton/static/baton/app/src/styles/_menu.scss
+++ b/baton/static/baton/app/src/styles/_menu.scss
@@ -29,7 +29,7 @@ body:not(.menu-mobile) {
   padding: 0;
   position: fixed;
   top: 0;
-  transition: left 0.4s ease-out;
+  transition: left 0.2s ease-in-out;
   z-index: 1002;
 
   @include media-breakpoint-up(lg) {
@@ -57,6 +57,14 @@ body:not(.menu-mobile) {
     position: absolute;
     right: 0;
     top: 0.6rem;
+  }
+
+  .toggle-menu-ac {
+    /* always collapsed close button */
+    color: var(--bs-baton-navbar-toggler-color);
+    font-size: 36px;
+    margin-right: 10px;
+    margin-top: 22px;
   }
 
   #user-tools {
